[package]
name = "crypt-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519 = "2.2.3"
ed25519-zebra = "4.0.3"
pkcs8 = { version = "0.10.2", features = ["pkcs5", "encryption", "alloc", "std"] }
rand = "0.8.5"
